samples/_failures_safe/1761513970_8cf37a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3c274a6b.c: In function ‘main’:
./samples/SAFE/__tmp_3c274a6b.c:160:11: error: expected ‘;’ at end of input
  160 |     printf
      |           ^
      |           ;
./samples/SAFE/__tmp_3c274a6b.c:160:5: error: expected declaration or statement at end of input
  160 |     printf
      |     ^~~~~~
